api/manifests/base/cybercrime-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cybercrime-api
  name: cybercrime-api
  namespace: default
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: cybercrime-api
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: cybercrime-api
    spec:
      containers:
        - image: cdssnc/cybercrime-api
          imagePullPolicy: Always
          name: cybercrime-api
          resources: {}
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status: {}
