api/manifests/base/cybercrime-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cybercrime-api
spec:
  ports:
    - name: api-port
      port: 3000
      targetPort: 3000
  selector:
    app: cybercrime-api
  type: ClusterIP
status:
  loadBalancer: {}
