api/manifests/base/cybercrime-api-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  name: cybercrime-api-ingress
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: cybercrime-api
              servicePort: api-port
            path: /graphql
